tests/ui/pattern/patkind-ref-binding-issue-114896.stderr
error[E0596]: cannot borrow `b` as mutable, as it is not declared as mutable
  --> $DIR/patkind-ref-binding-issue-114896.rs:7:9
   |
LL |         b.make_ascii_uppercase();
   |         ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |         let &(mut b) = a;
   |              ++++  +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
